# vite-task

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
crates/fspy/: Cargo.toml
crates/fspy_detours_sys/: Cargo.toml
crates/fspy_preload_windows/: Cargo.toml
crates/fspy_seccomp_unotify/: Cargo.toml
crates/fspy_shared/: Cargo.toml
crates/fspy_shared_unix/: Cargo.toml
crates/native_str/: Cargo.toml  README.md
crates/vite_powershell/: Cargo.toml
crates/vite_powershell/src/: lib.rs
crates/vite_task_bin/: Cargo.toml
crates/vite_task_bin/src/: main.rs
crates/vite_task_bin/src/vtt/: exit_on_ctrlc.rs  main.rs
crates/vite_task_bin/tests/e2e_snapshots/: redact.rs
crates/vite_task_bin/tests/e2e_snapshots/fixtures/concurrent-execution/: snapshots.toml
crates/vite_task_bin/tests/e2e_snapshots/fixtures/concurrent-execution/snapshots/: failure kills concurrent cached tasks.snap  failure kills concurrent tasks.snap  failure kills daemonized concurrent tasks.snap  independent tasks run concurrently.snap
crates/vite_task_bin/tests/e2e_snapshots/fixtures/ctrl-c/: package.json  snapshots.toml  vite-task.json
crates/vite_task_bin/tests/e2e_snapshots/fixtures/ctrl-c/snapshots/: ctrl-c prevents caching.snap  ctrl-c prevents future tasks.snap  ctrl-c terminates running tasks (cached).snap  ctrl-c terminates running tasks.snap
crates/vite_task_bin/tests/e2e_snapshots/fixtures/parallel-execution/: snapshots.toml
crates/vite_task_bin/tests/e2e_snapshots/fixtures/parallel-execution/snapshots/: parallel flag runs dependent tasks concurrently.snap
crates/vite_task_bin/tests/e2e_snapshots/fixtures/windows_powershell_shim_pathext/: .gitignore  package.json  snapshots.toml  vite-task.json
crates/vite_task_bin/tests/e2e_snapshots/fixtures/windows_powershell_shim_pathext/snapshots/: powershell_package_shim_keeps_pathext.md
docs/: cancellation.md  concurrency.md
playground/: README.md  pnpm-lock.yaml
(+124 files in other folders)
